Cleaned up code and created projects for code

--- a/ConsoleApp1.csproj
+++ b/ConsoleApp1.csproj
@@ -44,7 +44,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -55,6 +54,20 @@
     <PackageReference Include="Castle.Core">
       <Version>4.4.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Business\Business.csproj">
+      <Project>{5fdf8c5e-9d5c-400f-b824-61d772350c0d}</Project>
+      <Name>Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Container\Core.Container.csproj">
+      <Project>{3687a27d-c770-44ad-b67e-4763f2a9af17}</Project>
+      <Name>Core.Container</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{F280784C-5BED-4C1E-BEBC-E74D0EF94B29}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
