--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -46,9 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
+    <ProjectReference Include="..\Core\Domain.csproj">
       <Project>{F280784C-5BED-4C1E-BEBC-E74D0EF94B29}</Project>
-      <Name>Core</Name>
+      <Name>Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
