--- a/ConsoleApp1.csproj
+++ b/ConsoleApp1.csproj
@@ -56,17 +56,13 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business\Business.csproj">
+    <ProjectReference Include="Business\Business.csproj">
       <Project>{5fdf8c5e-9d5c-400f-b824-61d772350c0d}</Project>
       <Name>Business</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Container\Core.Container.csproj">
+    <ProjectReference Include="Container\Domain.Container.csproj">
       <Project>{3687a27d-c770-44ad-b67e-4763f2a9af17}</Project>
-      <Name>Core.Container</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{F280784C-5BED-4C1E-BEBC-E74D0EF94B29}</Project>
-      <Name>Core</Name>
+      <Name>Domain.Container</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
