--- a/ConsoleApp1.csproj
+++ b/ConsoleApp1.csproj
@@ -56,13 +56,13 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Business\Business.csproj">
-      <Project>{5fdf8c5e-9d5c-400f-b824-61d772350c0d}</Project>
-      <Name>Business</Name>
-    </ProjectReference>
-    <ProjectReference Include="Container\Domain.Container.csproj">
+    <ProjectReference Include="Domain\Container\Domain.Container.csproj">
       <Project>{3687a27d-c770-44ad-b67e-4763f2a9af17}</Project>
       <Name>Domain.Container</Name>
+    </ProjectReference>
+    <ProjectReference Include="Domain\Domain.Business\Domain.Business.csproj">
+      <Project>{5fdf8c5e-9d5c-400f-b824-61d772350c0d}</Project>
+      <Name>Domain.Business</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
