--- a/Domain/Container/Domain.Container.csproj
+++ b/Domain/Container/Domain.Container.csproj
@@ -50,17 +50,17 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business\Business.csproj">
+    <ProjectReference Include="..\Domain.Business\Domain.Business.csproj">
       <Project>{5fdf8c5e-9d5c-400f-b824-61d772350c0d}</Project>
-      <Name>Business</Name>
+      <Name>Domain.Business</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Core\Domain.csproj">
-      <Project>{f280784c-5bed-4c1e-bebc-e74d0ef94b29}</Project>
-      <Name>Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DataContracts\DataContracts.csproj">
+    <ProjectReference Include="..\Domain.DataContracts\Domain.DataContracts.csproj">
       <Project>{f2f2e79e-63b9-41fb-a7d7-1680b228931d}</Project>
-      <Name>DataContracts</Name>
+      <Name>Domain.DataContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain.Sharp\Domain.Sharp.csproj">
+      <Project>{f280784c-5bed-4c1e-bebc-e74d0ef94b29}</Project>
+      <Name>Domain.Sharp</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
